--- a/WebApplication7/Views/Shared/_Layout.cshtml
+++ b/WebApplication7/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Departments" asp-action="Index">Departmentos</a></li>
+                    <li><a asp-area="" asp-controller="Sellers" asp-action="Index">Vendedores</a></li>
                 </ul>
             </div>
         </div>
