--- a/WebApplication7/Views/Sellers/Index.cshtml
+++ b/WebApplication7/Views/Sellers/Index.cshtml
@@ -1,7 +1,53 @@
-﻿
+﻿<!--IEnumerable por ser genérico-->
+@model IEnumerable<WebApplication7.Models.Seller>
 @{
     ViewData["Title"] = "Index";
 }
 
 <h2>Index</h2>
+<table class="table table table-striped table-hover">
+    <thead>
+        <tr class="success">
+            <th>
+                @Html.DisplayNameFor(model => model.Nme)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BirthDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BaseSalary)
+            </th>
+            <th></th>
 
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelitem => item.Nme)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.BirthDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.BaseSalary)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+        }
+    </tbody>
+
+
+</table>
