Insert de Seller criado

--- a/WebApplication7/Views/Sellers/Index.cshtml
+++ b/WebApplication7/Views/Sellers/Index.cshtml
@@ -5,6 +5,13 @@
 }
 
 <h2>Index</h2>
+
+<p>
+    <a asp-action="Create" class="btn btn-default">
+        Criar Novo
+</a>
+</p>
+
 <table class="table table table-striped table-hover">
     <thead>
         <tr class="success">
@@ -48,6 +55,4 @@
         </tr>
         }
     </tbody>
-
-
 </table>
