--- a/WebApplication7/Views/Sellers/Index.cshtml
+++ b/WebApplication7/Views/Sellers/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.BaseSalary)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Department)
+            </th>
             <th></th>
 
         </tr>
@@ -46,6 +49,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelitem => item.BaseSalary)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.Department.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
