--- a/WebApplication7/Views/Sellers/Edit.cshtml
+++ b/WebApplication7/Views/Sellers/Edit.cshtml
@@ -11,21 +11,26 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div class="form-group">
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <input type="hidden" asp-for="Seller.Id" />
                 <label asp-for="Seller.Nme" class="control-label"></label>
                 <input asp-for="Seller.Nme" class="form-control" />
+                <span asp-validation-for="Seller.Nme" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.Email" class="control-label"></label>
                 <input asp-for="Seller.Email" class="form-control">
+                <span asp-validation-for="Seller.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BirthDate" class="control-label"></label>
                 <input asp-for="Seller.BirthDate" class="form-control">
+                <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BaseSalary" class="control-label"></label>
                 <input asp-for="Seller.BaseSalary" class="form-control">
+                <span asp-validation-for="Seller.BaseSalary" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId" class="control-label"></label>
@@ -39,3 +44,6 @@
     </div>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
